# DevSecCode-NPM

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-npm.yml
docs/: README.md
engine/: .gitignore  README.md  dsc-cli.spec  pyproject.toml
engine/public_rulepacks/_expanded/cwe/: cwe-22-path-traversal.yml  cwe-319-cleartext-http.yml  cwe-327-broken-crypto.yml  cwe-352-csrf.yml  cwe-611-xxe.yml  cwe-78-command-injection.yml  cwe-79-cross-site-scripting.yml  cwe-798-hardcoded-secrets.yml  cwe-89-sql-injection.yml
engine/public_rulepacks/_expanded/infra/: dockerfile.yml  kubernetes.yml
engine/scripts/: expand_rulepacks.py
engine/src/dsc/: __init__.py  _paths.py  config.py  public_cli.py
engine/src/dsc/engine/: __init__.py  opengrep_runner.py  realtime_matcher.py  result_mapper.py  rulepack_loader.py  schema.py
engine/src/dsc/formatters/: json_fmt.py  junit.py  sarif.py  terminal.py
engine/src/dsc/gamification/: __init__.py  achievements.py  animations.py  banner.py  categories.py  characters.py  deva.py  encounter.py  explore.py  imports.py  layout.py  menu.py  profile.py  report_store.py  screens.py  summary.py  triage.py  tui.py  watch.py
engine/src/dsc/postprocessors/: __init__.py  base.py
engine/src/dsc/scanner/: engine.py  models.py  parser.py  quality.py
engine/tests/: conftest.py  test_opengrep_runner.py  test_quality_data_file_filter.py  test_quality_inline_allowlist.py  test_quality_test_file_filter.py
npm-dist/: .gitignore  README.md  TESTING.md
(+15 files in other folders)
