[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsc"
version = "0.4.3"
description = "Gamified local security CLI for hunting common code vulnerabilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary - See LICENSE.txt" }
authors = [{ name = "DevSecCode" }]
classifiers = ["License :: Other/Proprietary License"]
dependencies = [
  "click>=8.1",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tree-sitter>=0.21",
  "tree-sitter-python>=0.21",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "tree-sitter-go>=0.21",
  "tree-sitter-java>=0.21",
  "tree-sitter-rust>=0.21",
  # Interactive play menu for the public CLI. Pulls prompt_toolkit +
  # wcwidth transitively; all pure-Python so the PyInstaller bundle
  # stays cross-arch.
  "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "mypy>=1.8",
  "black>=24.0",
  "build>=1.2",
  "twine>=5.0",
  "pre-commit>=3.7",
]

[project.scripts]
dsc = "dsc.public_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
